# Mycel

./: .gitignore  AGENTS-LOCAL.md  AGENTS-MYCEL.md  AGENTS.md  BOT-CONTRIBUTING.md  CONTRIBUTING.md  DESIGN-NOTES.auto-signer-consent-model.en.md  DESIGN-NOTES.auto-signer-consent-model.zh-TW.md  DESIGN-NOTES.first-client-scope-v0.1.en.md  DESIGN-NOTES.first-client-scope-v0.1.zh-TW.md  DESIGN-NOTES.governance-history-security.en.md  DESIGN-NOTES.governance-history-security.zh-TW.md  DESIGN-NOTES.mycel-full-stack-map.en.md  DESIGN-NOTES.mycel-full-stack-map.zh-TW.md  DESIGN-NOTES.neuro-triggered-donation.en.md  DESIGN-NOTES.neuro-triggered-donation.zh-TW.md  DESIGN-NOTES.qa-app-layer.en.md  DESIGN-NOTES.qa-app-layer.zh-TW.md  DESIGN-NOTES.qa-minimal-schema.en.md  DESIGN-NOTES.qa-minimal-schema.zh-TW.md  IMPLEMENTATION-CHECKLIST.en.md  IMPLEMENTATION-CHECKLIST.zh-CN.md  IMPLEMENTATION-CHECKLIST.zh-TW.md  MYCEL-PROJECT-NOTES.md  PROFILE.fund-auto-disbursement-v0.1.en.md  PROFILE.fund-auto-disbursement-v0.1.zh-TW.md  PROFILE.mycel-over-tor-v0.1.en.md  PROFILE.mycel-over-tor-v0.1.zh-TW.md  PROJECT-INTENT.md  PROJECT-INTENT.zh-TW.md  PROTOCOL.en.md  PROTOCOL.md  PROTOCOL.zh-TW.md  README.md  README.zh-CN.md  README.zh-TW.md  ROADMAP.md  ROADMAP.zh-CN.md  ROADMAP.zh-TW.md  RUST-WORKSPACE.md  (+6 more)
apps/mycel-cli/: Cargo.toml
apps/mycel-cli/src/: head.rs  main.rs  object.rs  report.rs  store.rs  view.rs
apps/mycel-cli/src/report/: diff.rs  mod.rs  query.rs  render.rs
apps/mycel-cli/src/store/: index.rs  write.rs
apps/mycel-cli/src/view/: current.rs  inspect.rs  list.rs  publish.rs  shared.rs
apps/mycel-cli/tests/: cli_usage_smoke.rs  head_inspect_smoke.rs  info_smoke.rs  object_inspect_smoke.rs  object_verify_smoke.rs  report_diff_smoke.rs  report_inspect_smoke.rs  report_latest_smoke.rs  report_list_smoke.rs  report_stats_smoke.rs  sim_run_smoke.rs  store_author_smoke.rs  store_index_smoke.rs  store_ingest_smoke.rs  store_rebuild_smoke.rs  sync_pull_smoke.rs  validate_smoke.rs  view_dual_role_smoke.rs  view_smoke.rs
crates/mycel-core/: Cargo.toml
crates/mycel-core/src/: author.rs  canonical.rs  head.rs  lib.rs  protocol.rs  replay.rs  signature.rs  store.rs  sync.rs  verify.rs  wire.rs
crates/mycel-sim/: Cargo.toml
crates/mycel-sim/src/: lib.rs  model.rs  run.rs  validate.rs
(+379 files in other folders)
