[package]
name = "mycel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mycel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mycel-core = { path = "../../crates/mycel-core" }
mycel-sim = { path = "../../crates/mycel-sim" }
serde_json = "1.0"

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = "2.1"
sha2 = "0.10"
