[package]
name = "mycel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mycel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
ed25519-dalek = "2.1"
mycel-core = { path = "../../crates/mycel-core" }
mycel-sim = { path = "../../crates/mycel-sim" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.2"
base64 = "0.22"
predicates = "3.1"
sha2 = "0.10"
tempfile = "3.27"
