[package]
name = "mycel-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mycel-core = { path = "../mycel-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
